--- a/sner/server/templates/storage/host/list.html
+++ b/sner/server/templates/storage/host/list.html
@@ -2,10 +2,22 @@
 
 {% block script %}
 <script type="text/javascript">
-	var datatable_ajax_custom = {
-		"ajax": {"url": "{{ url_for('storage.host_list_json_route') }}", "method": "POST"},
-		"columns": columns_with_buttons(["id", column("address", {"render": null}), "hostname", "os", "nr_svcs", "nr_notes", "comment"])
+	var dt_host_list_table_options = {
+		'ajax': {'url': "{{ url_for('storage.host_list_json_route') }}", 'method': 'POST'},
+		'columns': [
+			dt_column('id'),
+			dt_column('address', {'render': function (data, type, row, meta) { return pagepart_host_link({'host_id': row['id'], 'host_address': row['address']}); }}),
+			dt_column('hostname'),
+			dt_column('os'),
+			dt_column('nr_svcs'),
+			dt_column('nr_notes'),
+			dt_column('comment'),
+			dt_column_buttons(pagepart_host_controls)
+		]
 	};
+	$(document).ready(function() {
+		var dt_host_list_table = $('#host_list_table').DataTable($.extend({}, dt_ajax_options, dt_host_list_table_options));
+	});
 </script>
 {% endblock %}
 
@@ -13,6 +25,6 @@
 <div class="hosts">
 	<h1>Hosts list <a class="btn btn-xs btn-success" href="{{ url_for('storage.host_add_route') }}"><span class="glyphicon glyphicon-plus"></span> Add</a></h1>
 
-	<table id="hosts_table" class="datatable_ajax table table-hover table-responsive table-condensed"></table>
+	<table id="host_list_table" class="table table-hover table-responsive table-condensed"></table>
 </div>
 {% endblock %}
