--- a/sner/server/templates/storage/service/list.html
+++ b/sner/server/templates/storage/service/list.html
@@ -2,10 +2,25 @@
 
 {% block script %}
 <script type="text/javascript">
-	var datatable_ajax_custom = {
-		"ajax": {"url": "{{ url_for('storage.service_list_json_route', **request.args) }}", "method": "POST"},
-		"columns": columns_with_buttons(["id", column("address", {"render": null}), "hostname", "proto", "port", "name", "state", "info", "comment"])
+	var dt_service_list_table_options = {
+		'ajax': {'url': "{{ url_for('storage.service_list_json_route', **request.args) }}", 'method': 'POST'},
+		'columns': [
+			dt_column('id'),
+			dt_column('host_id', {'visible': false}),
+			dt_column('host_address', {'render': function (data, type, row, meta) { return pagepart_host_link(row); }}),
+			dt_column('host_hostname'),
+			dt_column('proto'),
+			dt_column('port'),
+			dt_column('name'),
+			dt_column('state'),
+			dt_column('info'),
+			dt_column('comment'),
+			dt_column_buttons(pagepart_service_controls)
+		]
 	};
+	$(document).ready(function() {
+		var dt_service_list_table = $('#service_list_table').DataTable($.extend({}, dt_ajax_options, dt_service_list_table_options));
+	});
 </script>
 {% endblock %}
 
@@ -13,6 +28,6 @@
 <div class="services">
 	<h1>Services list{% if 'port' in request.args %} <small><a class="btn btn-info" href="{{ url_for('storage.service_list_route') }}">unfilter</a></small>{% endif %}</h1>
 
-	<table id="services_table" class="datatable_ajax table table-hover table-responsive table-condensed"></table>
+	<table id="service_list_table" class="table table-hover table-responsive table-condensed"></table>
 </div>
 {% endblock %}
