--- a/sner/server/templates/storage/vuln/list.html
+++ b/sner/server/templates/storage/vuln/list.html
@@ -1,234 +1,27 @@
 {% extends "base.html" %}
 
 {% block script %}
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='datatables/select.dataTables.min.css') }}" />
-<script type="text/javascript" src="{{ url_for('static', filename='datatables/dataTables.select.min.js') }}"></script>
-<script type="text/javascript" src="{{ url_for('static', filename='handlebars/handlebars.min.js') }}"></script>
-
-
-{% raw %}
-<script id="pagepart-host_link.hbs" type="text/x-handlebars-template">
-	<a href="{{> host_view_route }}">{{host_address}}</a>
-</script>
-
-<script id="pagepart-vuln_link.hbs" type="text/x-handlebars-template">
-	<a href="{{> vuln_view_route vuln_id=id}}">{{name}}</a>
-</script>
-
-<script id="pagepart-severity_label.hbs" type="text/x-handlebars-template">
-	<span class="label {{color_for_severity severity}}">{{severity}}</span>
-</script>
-
-<script id="pagepart-vuln_refs.hbs" type="text/x-handlebars-template">
-{{#each refs}}
-	<a href="{{url_for_ref this}}">{{text_for_ref this}}</a>
-{{/each}}
-</script>
-
-<script id="pagepart-vuln_controls.hbs" type="text/x-handlebars-template">
-	<a class="btn btn-xs btn-primary" href="{{> vuln_edit_route vuln_id=id}}"><span class="glyphicon glyphicon-edit"></span></a>
-	<a class="btn btn-xs btn-danger abutton_deleterow" data-url="{{> vuln_delete_route vuln_id=id}}"><span class="glyphicon glyphicon-trash"></span></a>
-</script>
-{% endraw %}
-
-
 <script type="text/javascript">
-	// general sner UI helpers
-	//
-	/*
-	 * sner submit form
-	 */
-	function sner_submit_form(url, data={}) {
-		data['csrf_token'] = $('meta[name="csrf-token"]').attr('content');
-		return $.ajax({"url": url,"type": "POST", "data": data})
-			.fail(function(xhr, status, exception) { toastr.error(xhr.responseJSON["title"]); });
-	}
-
-
-
-	// toolbar/ui actions
-	//
-	/*
-	 * action select all from table
-	 */
-	function action_selectall(event) {
-		event.data.dt.rows(null, {'page': 'current'}).select();
-	}
-
-	/*
-	 * action select none from dt
-	 */
-	function action_selectnone(event) {
-		event.data.dt.rows(null, {'page': 'current'}).deselect();
-	}
-
-	/*
-	 * action tag multiple items
-	 * @param {object} event - event with data {"dt": datatable instance, "tag": string}
-	 */
-	function action_tag_by_id(event) {
-		var data = {'tag': event.target.getAttribute('data-tag')};
-
-		var ids = dt_get_selected_ids(event.data.dt);
-		for (var i = 0; i < ids.length; i++) { data['ids-'+i] = ids[i]; }
-
-		sner_submit_form(event.data.url, data)
-			.always(function() { event.data.dt.draw(); });
-	}
-
-	/*
-	 * action delete multiple items
-	 * @param {object} event - event with data {"dt": datatable instance}
-	 */
-	function action_delete_by_id(event) {
-		if (!confirm('Really delete?')) { return; }
-
-		var data = {};
-		var ids = dt_get_selected_ids(event.data.dt);
-		for (var i = 0; i < ids.length; i++) { data['ids-'+i] = ids[i]; }
-
-		sner_submit_form(event.data.url, data)
-			.always(function() { event.data.dt.draw(); });
-	}
-
-	/*
-	 * action delete row
-	 * @param {object} event - event with data {"dt": datatable instance}
-	 */
-	function action_deleterow(event) {
-		if (!confirm('Really delete?')) { return; }
-
-		sner_submit_form(event.target.closest('a').getAttribute('data-url'))
-			.always(function() { event.data.dt.draw(); });
-	}
-
-
-
-	// datatables helpers
-	//
-	/*
-	 * datatables select helper, returns array of selected rows/data ids
-	 * @param {object} dt - datatable instance
-	 */
-	function dt_get_selected_ids(dt) {
-		// would use .map return item[x], but it does not cleanup other row attrs
-		var ids = [];
-		dt.rows({'selected': true}).data().each(function(item) { ids.push(item['id']) });
-		return ids;
-	};
-
-	/*
-	 * datatables helper, toggles pagination if needed
-	 * @param {object} dt - datatable instance
-	 */
-	function dt_toggle_pagination(dt) {
-		var pagination = $('#'+dt.table().node().id+'_wrapper .dataTables_paginate');
-		if (dt.page.info().pages <= 1) {
-			pagination.hide();
-		} else {
-			pagination.show();
-		}
-	}
-
-
-
-	// sner ui pageparts and helpers
-	//
-
-	/*
-	 * generate url for ref
-	 */
-	Handlebars.registerHelper('url_for_ref', function(ref) {
-		var ret = ref;
-
-		var matched = ref.match(/(.*?)\-(.*)/);
-		if (matched) {
-			var [ident, data] = [matched[1], matched[2]];
-			switch (ident) {
-				case 'URL': ret = data; break;
-				case 'CVE': ret = 'https://cvedetails.com/cve/CVE-'+data; break;
-				case 'NSS': ret = 'https://www.tenable.com/plugins/nessus/'+data; break;
-				case 'BID': ret = 'http://www.securityfocus.com/bid/'+data; break;
-				case 'CERT': ret = 'https://www.kb.cert.org/vuls/id/'+data; break;
-				case 'EDB': ret = 'https://www.exploit-db.com/exploits/'+data.replace('ID-', ''); break;
-				case 'SN': ret = "{{ url_for('storage.note_view_route', note_id='REPLACE') }}".replace('REPLACE', data); break;
-				default: ret = ref; break;
-			}
-		}
-
-		return ret;
-	});
-
-	/*
-	 * generate text for ref
-	 */
-	Handlebars.registerHelper('text_for_ref', function(ref) {
-		return (ref.startsWith('URL-')) ? 'URL' : ref;
-	});
-
-	/*
-	 * get class for severity label
-	 */
-	Handlebars.registerHelper('color_for_severity', function(severity) {
-		switch (severity) {
-			case 'unknown': return 'label-default';
-			case 'info': return 'label-primary';
-			case 'low': return 'label-success';
-			case 'medium': return 'label-info';
-			case 'high': return 'label-warning';
-			case 'critical': return 'label-danger';
-		}
-		return 'label-default';
-	});
-
-	/*
-	 * hbs partials to pass flask endpoint uri template to the template
-	 */
-	Handlebars.registerPartial('host_view_route', "{{ url_for('storage.host_view_route', host_id='REPLACE') }}".replace('REPLACE', '{%raw%}{{host_id}}{%endraw%}'));
-	Handlebars.registerPartial('vuln_view_route', "{{ url_for('storage.vuln_view_route', vuln_id='REPLACE') }}".replace('REPLACE', '{%raw%}{{vuln_id}}{%endraw%}'));
-	Handlebars.registerPartial('vuln_edit_route', "{{ url_for('storage.vuln_edit_route', vuln_id='REPLACE') }}".replace('REPLACE', '{%raw%}{{vuln_id}}{%endraw%}'));
-	Handlebars.registerPartial('vuln_delete_route', "{{ url_for('storage.vuln_delete_route', vuln_id='REPLACE') }}".replace('REPLACE', '{%raw%}{{vuln_id}}{%endraw%}'));
-
-	/*
-	 * hbs templates
-	 */
-	var pagepart_host_link = Handlebars.compile(document.getElementById('pagepart-host_link.hbs').innerHTML);
-	var pagepart_vuln_link = Handlebars.compile(document.getElementById('pagepart-vuln_link.hbs').innerHTML);
-	var pagepart_severity_label = Handlebars.compile(document.getElementById('pagepart-severity_label.hbs').innerHTML);
-	var pagepart_vuln_refs = Handlebars.compile(document.getElementById('pagepart-vuln_refs.hbs').innerHTML);
-	var pagepart_vuln_controls = Handlebars.compile(document.getElementById('pagepart-vuln_controls.hbs').innerHTML);
-
-
-
-	// current page setup
-	//
 	var dt_vuln_list_table_options = {
 		'ajax': {'url': "{{ url_for('storage.vuln_list_json_route') }}", 'method': 'POST'},
 		'columns': [
-			{'name': '_select', 'title': '', 'data': null, 'defaultContent': '', 'orderable': false, 'className': 'select-checkbox'},
-			column('id'),
-			column('host_id', {'visible': false}),
-			column('host_address', {'render': function (data, type, row, meta) { return pagepart_host_link(row); }}),
-			column('host_hostname'),
-			column('service'),
-			column('name', {'render': function (data, type, row, meta) { return pagepart_vuln_link(row); }}),
-			column('xtype'),
-			column('severity', {'render': function (data, type, row, meta) { return pagepart_severity_label(row); }}),
-			column('refs', {'render': function (data, type, row, meta) { return pagepart_vuln_refs(row); }}),
-			column('tags'),
-			column('comment'),
-			{'name': '_buttons', 'title': '_buttons', 'data': '_buttons', 'orderable': false, 'render': function (data, type, row, meta) { return pagepart_vuln_controls(row); }},
-		],
-		'dom': '<"row"<"col-sm-6"l><"col-sm-6"f>> <"row"<"col-sm-12"p>> <"row"<"col-sm-12"rt>> <"row"<"col-sm-6"i><"col-sm-6"p>>',
-		'order': [[1, 'asc']],
-		'select': {'style': 'multi', 'selector': 'td:first-child'},
-		'drawCallback': function (settings) {
-			dt_toggle_pagination(this.api());
-			$('.abutton_deleterow').on('click', {'dt': this.api()}, action_deleterow);
-		},
+			dt_column_select(),
+			dt_column('id'),
+			dt_column('host_id', {'visible': false}),
+			dt_column('host_address', {'render': function (data, type, row, meta) { return pagepart_host_link(row); }}),
+			dt_column('host_hostname'),
+			dt_column('service'),
+			dt_column('name', {'render': function (data, type, row, meta) { return pagepart_vuln_link(row); }}),
+			dt_column('xtype'),
+			dt_column('severity', {'render': function (data, type, row, meta) { return pagepart_severity_label(row); }}),
+			dt_column('refs', {'render': function (data, type, row, meta) { return pagepart_vuln_refs(row); }}),
+			dt_column('tags'),
+			dt_column('comment'),
+			dt_column_buttons(pagepart_vuln_controls)
+		]
 	};
 	$(document).ready(function() {
-		var dt_vuln_list_table = $('#vuln_list_table').DataTable($.extend({}, datatable_ajax_options, dt_vuln_list_table_options));
+		var dt_vuln_list_table = $('#vuln_list_table').DataTable($.extend({}, dt_ajax_options, dt_vuln_list_table_options));
 		$('#vuln_list_table_toolbar .abutton_selectall').on('click', {'dt': dt_vuln_list_table}, action_selectall);
 		$('#vuln_list_table_toolbar .abutton_selectnone').on('click', {'dt': dt_vuln_list_table}, action_selectnone);
 		$('#vuln_list_table_toolbar .abutton_tagmulti').on('click', {'dt': dt_vuln_list_table, 'url': "{{ url_for('storage.vuln_tag_by_id_route') }}"}, action_tag_by_id);
