storage: forcewrap selected columns (note.data are sometime very long and without whitespace)

--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -39,6 +39,11 @@
 
 		/* tag-editor same borders as other bootstraped input */
 		.tag-editor { border: 1px solid #ccc; border-radius: 4px; }
+
+		/* note data may contain very long unwrapable data */
+		.forcewrap {
+			word-wrap: break-word; word-break: break-all; white-space: normal;
+		}
 	</style>
 
 
