--- a/sner/server/templates/storage/host/view.html
+++ b/sner/server/templates/storage/host/view.html
@@ -116,7 +116,7 @@
 						dt_column('host_hostname', {'visible': false}),
 						dt_column('service'),
 						dt_column('xtype'),
-						dt_column('data'),
+						dt_column('data', {'className': 'forcewrap'}),
 						dt_column('comment'),
 						dt_column_buttons(pagepart_note_controls)
 					]
