--- a/sner/server/templates/storage/note/list.html
+++ b/sner/server/templates/storage/note/list.html
@@ -11,7 +11,7 @@
 			dt_column('host_hostname'),
 			dt_column('service'),
 			dt_column('xtype'),
-			dt_column('data', {'width': '70%'}),
+			dt_column('data', {'className': 'forcewrap'}),
 			dt_column('comment'),
 			dt_column_buttons(pagepart_note_controls)
 		]
